<resources>
    <string name="app_name">ShoppingAssistant</string>
    <string name="product_score">%1$.1f/%2$d</string>
    <string name="show_filter">Filter</string>
    <string name="show_products">Show</string>
    <string name="backend_base_url">http://10.0.2.2:8080</string>
    <string name="google_cloud_functions_url">https://europe-central2-shop-assistant-360218.cloudfunctions.net</string>
    <string name="products_query">Query:</string>
    <string name="loading">Loading…</string>
    <string name="product_price">%1$.2f PLN</string>
    <string name="error_status">Status:</string>
    <string name="error_msg">Msg:</string>
    <string name="error_request_id">Request ID:</string>
    <string name="error_dismiss">Dismiss</string>
    <string name="factor_importance">Factors importance</string>
    <string name="price">Price</string>
    <string name="settings">SETTINGS</string>
    <string name="rating">Rating</string>
    <string name="brand">Brand</string>
    <string name="save">SAVE</string>
    <string name="ai">AI</string>
    <string name="my_searches">My searches</string>
    <string name="date_fromat">dd/MM/yyyy hh:mm</string>
    <string name="assist">ASSIST</string>
    <string name="close">CLOSE</string>
    <string name="min_price">Min price:</string>
    <string name="max_price">Max price</string>
    <string name="name">Name</string>
    <string name="brand_name">Brand name</string>
    <string name="review_score">Review score</string>
    <string name="trusted_brands">Trusted brands</string>
    <string name="add_trusted_brand">Add trusted brand</string>
    <string name="add_brand">Add brand</string>
    <string name="my_brands">My brands</string>
    <string name="delete">DELETE</string>
    <string name="del_x">X</string>
    <string name="add">Add</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="rank">Rank</string>
    <string name="top_products">TOP products</string>
    <string name="show">SHOW</string>
</resources>